Ensure sad tab is drawn even when dev tools is showing.

Bug: 812126
Change-Id: If5ceea0c70e8233926089e72898a0cde49eaebdc
Reviewed-on: https://chromium-review.googlesource.com/923114
Commit-Queue: Dominic Mazzoni <dmazzoni@chromium.org>
Reviewed-by: Scott Violet <sky@chromium.org>
Cr-Commit-Position: refs/heads/master@{#538257}
Former-commit-id: 03a4f1efe8af5b3aaf2f576e2534fad34593059e